--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10656,7 +10656,11 @@ a.text-dark:focus {
 }
 
 .navbar-laravel {
-  background-color: #fff;
+  background-color: #041e42;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.navbar-laravel .nav-item a {
+  color: white !important;
 }
 
