--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10655,6 +10655,15 @@ a.text-dark:focus {
   }
 }
 
+.up_down_arrow:hover {
+  color: #0000F0;
+  cursor: pointer;
+}
+
+.fa-trash-alt {
+  color: red;
+}
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
