--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -145,6 +145,11 @@ body {
  * Copyright (c) 2013, salesforce.com
  */
 
+#content-section img {
+    max-width: 80% !important;
+    display: block !important;
+    margin: auto !important;
+}
 
 .ql-container {
     box-sizing: border-box;
