--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,6 +235,19 @@ marquee {
     visibility: hidden;
 }
 
+.nps-tr {
+    border-top: 2px solid rgba(0,0,0,.5);
+}
+
+.nps-tr td {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.search-div, .search-tr {
+    display: none;
+}
+
 /*@media screen and (max-width: 991px) {*/
 /*    .navbar-toggler {*/
 /*        display: block;*/
