--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -51,7 +51,15 @@ body {
     left: 0;
     z-index: 100; /* Behind the navbar */
     padding: 48px 0 0; /* Height of navbar */
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 10px 1px;
+}
+
+.card {
+    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 10px 1px !important;
+}
+
+.card .card-header, .card .card-footer {
+    background-color: rgba(0, 0, 255, 0.01);
 }
 
 .sidebar-sticky {
@@ -61,6 +69,7 @@ body {
     padding-top: .5rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+
 }
 
 @supports ((position: -webkit-sticky) or (position: sticky)) {
