--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11100,6 +11100,11 @@ a.text-dark:focus {
   }
 }
 
+main {
+  background-color: #f0f3f5;
+  margin-top: 0 !important;
+}
+
 .up_down_arrow:hover {
   color: #0000F0;
   cursor: pointer;
@@ -11151,7 +11156,7 @@ body {
 }
 
 .card {
-  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 10px 1px !important;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 5px 1px !important;
 }
 
 .card .card-header,
