--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,12 @@
 @import '~bootstrap/scss/bootstrap';
 
 
+main {
+    background-color: #f0f3f5;
+    margin-top: 0 !important;
+}
+
+
 .up_down_arrow:hover {
     color: #0000F0;
     cursor: pointer;
@@ -55,7 +61,7 @@ body {
 }
 
 .card {
-    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 10px 1px !important;
+    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 5px 1px !important;
 }
 
 .card .card-header, .card .card-footer {
