--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,12 @@
 @import '~bootstrap/scss/bootstrap';
 
 
+main {
+    background-color: #f0f3f5;
+    margin-top: 0 !important;
+}
+
+
 .up_down_arrow:hover {
     color: #0000F0;
     cursor: pointer;
