--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,9 +94,51 @@ body {
     color: #2366a5;
 }
 
+.base-exams-table thead tr td {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.base-exams-table .exam-rights {
+    background-color: rgba(0, 128, 0, 0.3);
+}
+
+.bac-mag {
+    height: 50px;
+}
+
+.bac-mag .nav-link {
+    color: rgba(35, 102, 165, 0.7) !important;
+}
+
+.bac-mag .nav-link:hover {
+    color: #2366a5 !important;
+}
+
+.bac-mag .form-inline button {
+    background-color: rgba(35, 102, 165, 0.7);
+    color: white;
+}
+
+.bac-mag .form-inline button:hover {
+    background-color: rgba(35, 102, 165, 1);
+}
+
+.bac-mag .form-inline input {
+    border: 1px solid #2366a5;
+    width: 300px;
+}
+
+
 .mrsu-hr {
     height: 5px;
     width: 95%;
+}
+
+.examInfo {
+    background-color: rgba(255, 0, 0, 0.2);
+    width: max-content;
+    border-radius: 10px;
 }
 
 marquee {
@@ -110,7 +152,6 @@ marquee {
     width: 80%;
     margin: auto;
 }
-
 
 .inputGroup {
     background-color: rgba(85, 98, 235, 0.51);
