--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11152,7 +11152,16 @@ body {
   /* Behind the navbar */
   padding: 48px 0 0;
   /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 10px 1px;
+}
+
+.card {
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 5px 1px !important;
+}
+
+.card .card-header,
+.card .card-footer {
+  background-color: rgba(0, 0, 255, 0.01);
 }
 
 .sidebar-sticky {
