--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,14 @@ main {
     margin-top: 0 !important;
 }
 
+.text-red {
+    color: red;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
 
 .up_down_arrow:hover {
     color: #0000F0;
