--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .mrsu-card {
-    background-color: #eaeaea;
+    background-color: #f9f9f9;
 }
 
 .mrsu-card > ul {
@@ -66,6 +66,11 @@ body {
     color: white;
     padding: 5px;
     font-size: 13px;
+}
+
+.list-sections li {
+    padding: 5px 10px;
+    background-color: rgb(55, 153, 233);
 }
 
 /*.navbar-toggler {*/
@@ -324,6 +329,56 @@ marquee {
     text-decoration: underline;
 }
 
+.files-list {
+    list-style: none;
+    padding: 0;
+    display: block;
+}
+
+.files-list li {
+    border-bottom: 1px solid lightgray;
+    min-width: 300px;
+    width: fit-content;
+    margin: 10px;
+    margin-left: 0;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.files-list li img {
+    width: 60px;
+    margin-right: 20px;
+}
+
+.file-link-div a {
+    color: #1b4b72;
+}
+
+
+.vh {
+    height: 100vh !important;
+}
+
+.contact-us {
+    margin: auto;
+    padding: 50px 20px;
+    width: fit-content;
+}
+
+.contact-us input, .contact-us textarea, .contact-us button {
+    margin: 10px;
+    width: 90%;
+    border: 1px solid #1b4b72;
+    padding: 5px;
+    color: #1b4b72;
+}
+
+.contact-us button:hover {
+    cursor: pointer;
+    background-color: #1b4b72;
+    color: white;
+}
 
 /*@media screen and (max-width: 991px) {*/
 /*    .navbar-toggler {*/
