--- a/public/css/style.css
+++ b/public/css/style.css
@@ -380,6 +380,19 @@ marquee {
     color: white;
 }
 
+.table-scores td, .table-scores th {
+    border: 1px solid rgba(85, 98, 235, 0.51) !important;
+}
+
+.table-scores thead tr th{
+    background-color: rgba(85, 98, 235, 0.51) !important;
+    text-transform: uppercase;
+    font-weight: normal;
+    padding: 8px;
+    text-align: center;
+    vertical-align: center;
+}
+
 /*@media screen and (max-width: 991px) {*/
 /*    .navbar-toggler {*/
 /*        display: block;*/
