--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,7 @@ body {
 
 .list-sections li {
     padding: 5px 10px;
-    background-color: rgb(55, 153, 233);
+    background-color: #2366a5;
 }
 
 /*.navbar-toggler {*/
@@ -399,6 +399,10 @@ marquee {
 
 .table-scores tr td button {
     color: #2366a5 !important;
+}
+
+.main-color {
+    color: #2366a5 !important
 }
 
 /*@media screen and (max-width: 991px) {*/
