--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,10 @@ body {
     height: 54px;
 }
 
+.chosen-student {
+    background-color: rgba(0, 128, 0, 0.1);
+}
+
 .main-nav {
     background-color: #2366a5 !important;
 }
@@ -142,10 +146,38 @@ body {
     width: 95%;
 }
 
-.examInfo {
-    background-color: rgba(255, 0, 0, 0.2);
+.exam-info-outer {
     width: max-content;
-    border-radius: 10px;
+}
+
+.examInfo {
+    background-color: rgba(35, 102, 165, 0.1);
+    color: #2366a5;
+    font-size: 18px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.examInfo-bottom {
+    margin-bottom: 20px;
+    padding: 10px;
+    color: white;
+    background-color: #2366a5;
+    font-size: 18px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.examInfo tbody tr td {
+    padding-left: 6px;
+}
+
+.examInfo tbody tr {
+    border-bottom: 1px solid rgba(35, 102, 165, 0.33);
+}
+
+.examInfo tbody tr:last-child {
+    border: none;
 }
 
 marquee {
