--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
 body {
     font-family: 'PT Sans', sans-serif;
 }
