--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,15 +150,17 @@ body {
     margin-bottom: 30px;
     display: flex;
     align-items: stretch;
+    height:max-content;
 }
 
 .examInfo {
     background-color: rgba(35, 102, 165, 0.1);
     color: #2366a5;
     font-size: 18px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
     width:inherit;
+    min-height: inherit;
 }
 
 .examInfo-bottom {
@@ -167,8 +169,8 @@ body {
     color: white;
     background-color: #2366a5;
     font-size: 18px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 .examInfo-bottom .spec{
@@ -483,6 +485,8 @@ marquee {
 .main-color {
     color: #2366a5 !important
 }
+
+
 
 /*@media screen and (max-width: 991px) {*/
 /*    .navbar-toggler {*/
