--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,9 +159,10 @@ body {
     color: #2366a5 !important;
 }
 
-.bac-mag .form-inline button {
+.form-row button {
     background-color: rgba(35, 102, 165, 0.7);
     color: white;
+    border: none;
 }
 
 .bac-mag .form-inline button:hover {
@@ -288,6 +289,10 @@ marquee {
     font-size: 16px;
     font-weight: 300;
     line-height: 1.31;
+}
+
+.section-content-block {
+
 }
 
 .topline {
@@ -479,6 +484,10 @@ marquee {
     border-radius: 50%;
 }
 
+.padding-0 {
+    padding-top: 0 !important;
+}
+
 
 .contact-us input, .contact-us textarea {
     margin: 10px;
@@ -526,14 +535,11 @@ marquee {
     color: #2366a5 !important
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px){
+
     .cont-w-100 {
         max-width: 100vw !important;
     }
-}
-
-
-@media screen and (max-width: 1000px){
 
     .mrsu-logo-blue, .mrsu-eye-blue {
         display: none;
@@ -581,20 +587,22 @@ marquee {
 }
 
 @media screen and (max-width: 1000px) {
+
+    .section-content-block {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
     .cont-w-100 {
         max-width: 100vw !important;
     }
-}
 
-/*@media screen and (max-width: 991px) {*/
-/*    .navbar-toggler {*/
-/*        display: block;*/
-/*    }*/
-/*}*/
-
-@media screen and (max-width: 1000px) {
     .carousel-item {
         height: 250px;
+    }
+
+    .padding-0 {
+        padding-top: 0 !important;
     }
 }
 
@@ -660,16 +668,28 @@ marquee {
     .h5-mrsu {
         font-size: 1rem;
     }
+
+    .padding-0 {
+        padding-top: 0 !important;
+    }
 }
 
 @media screen and (max-width: 375px){
     .carousel-item {
         height: 200px !important;
     }
+
+    .padding-0 {
+        padding-top: 0 !important;
+    }
 }
 
 @media screen and (max-width: 320px){
     .carousel-item {
         height: 150px !important;
+    }
+
+    .padding-0 {
+        padding-top: 0 !important;
     }
 }
