--- a/public/css/style.css
+++ b/public/css/style.css
@@ -387,6 +387,10 @@ marquee {
     visibility: hidden;
 }
 
+.hamburger {
+    outline: none !important;
+}
+
 .nps-tr {
     border-top: 2px solid rgba(0, 0, 0, .5);
 }
@@ -535,7 +539,16 @@ marquee {
     color: #2366a5 !important
 }
 
+.dropdown-menu a.nav-link.text-white:active {
+    background-color: #2689cd;
+}
+
 @media screen and (max-width: 1000px){
+
+    nav.navbar {
+        padding-left: 0;
+        padding-right: 0;
+    }
 
     .cont-w-100 {
         max-width: 100vw !important;
