--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,11 @@ body {
     background-color: #2366a5;
 }
 
+.mrsu-bg-button {
+    background-color: #2366a5;
+    border-color: #2366a5;
+}
+
 .mrsu-uppertext {
     text-transform: uppercase;
 }
