--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -2,8 +2,18 @@
 
 body {
     font-family: 'PT Sans', sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     outline: none !important;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    font-weight: bold;
+    color: black;
 }
 
 #square {
@@ -39,47 +49,131 @@ body {
     border: 1px solid #000000;
     font-size: 20px;
 }
-.mrsu-bg-button:hover{
+
+.mrsu-bg-button:hover {
     background-color: #ffffff;
-    color:black;
+    color: black;
     border: 1px solid #000000;
 }
+
 .mrsu-bg-button-ovz {
     background-color: #ffffff;
     border: 1px solid #000000;
     font-size: 20px;
 }
-.mrsu-bg-button-ovz:hover{
+
+.mrsu-bg-button-ovz:hover {
     background-color: #ffffff;
-    color:black;
+    color: black;
     border: 1px solid #000000;
 }
-.fa-search{
-    color:black!important;
+
+.fa-search {
+    color: black !important;
 }
 
-.ovz-form{
+.ovz-form {
     font-size: 20px;
 }
+
 .mrsu-uppertext {
     text-transform: uppercase;
 }
 
-.table-ovz{
-    border: 2px solid black!important;
+.ovz-form .filter-option-inner-inner {
+    /*font-size:20px;*/
+    font-weight: bold;
 }
-.table-ovz thead{
-    background-color: #ffffff!important;
+
+.ovz-form input {
+    font-size: 20px;
+    border: 2px solid black;
 }
-.table-ovz thead,.table-ovz tbody,.table-ovz tr,.table-ovz td,.table-ovz th{
-    border: 1px solid black!important;
+
+.ovz-form .btn {
+    border: 2px solid black;
 }
+
+.chosen-student-ovz {
+    margin: 20px 0;
+}
+
+.chosen-student-ovz span {
+    font-size: 24px !important;
+}
+
+.chosen-student-ovz a {
+    font-size: 24px !important;
+}
+
+.h1-mrsu {
+    font-weight: bold;
+}
+h4{
+    font-weight: bold;
+}
+.ovz-text{
+    font-size:22px;
+}
+.check-subjects input {
+    width: 26px;
+    height: 26px;
+}
+.check-faculties input {
+    width: 26px;
+    height: 26px;
+}
+
+
+
+
+.bold-border-imp{
+    border-bottom:2px solid black !important;
+}
+.bold-border-right-imp{
+    border-bottom:2px solid black !important;
+    border-right:2px solid black !important;
+}
+
+.table-ovz-select, .table-ovz-select thead {
+    border: 2px solid black;
+}
+.table-ovz-select thead {
+    background-color: #ffffff !important;
+}
+
+ .table-ovz-select tbody,.table-ovz-select tr, .table-ovz-select td, .table-ovz-select th {
+    border: 1px solid black ;
+}
+.table-ovz-select thead th{
+    border: 1px solid black;
+}
+.faculty-head{
+    color:black;
+}
+
+
+
+.table-ovz {
+    border: 2px solid black;
+}
+.table-ovz thead {
+    background-color: #ffffff !important;
+}
+
+.table-ovz thead, .table-ovz tbody, .table-ovz tr, .table-ovz td, .table-ovz th {
+    border: 1px solid black !important;
+}
+
+
 .mrsu-logo-img {
     width: 0;
 }
+
 .mrsu-logo-img-ovz {
     width: 800px;
 }
+
 .chosen-student {
     background-color: rgba(0, 128, 0, 0.1);
 }
@@ -100,8 +194,8 @@ body {
 
 .main-nav ul li:hover {
     background-color: #ffff;
-    border-right:1px solid black;
-    border-left:1px solid black;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
 }
 
 .mrsu-card {
@@ -127,8 +221,9 @@ body {
     border-radius: 0 !important;
     border: 1px solid black;
 }
-.navbar{
-    border:1px solid black;
+
+.navbar {
+    border: 1px solid black;
 }
 
 .mrsu-card > ul > li {
@@ -138,6 +233,10 @@ body {
 .mrsu-card > ul > li > ul li {
     font-style: italic;
     margin-bottom: 5px;
+}
+
+#ovz_version {
+    display: none !important;
 }
 
 .title-text {
@@ -162,8 +261,16 @@ body {
     border: 1px solid black;
 }
 
+.infoblock-card a:hover {
+    border: 2px solid black;
+}
+
 .infoblock-card .card-body img {
     height: auto;
+}
+
+h5 {
+    font-size: 24px;
 }
 
 .list-sections li {
@@ -173,8 +280,8 @@ body {
 
 }
 
-.list-sections li > a{
-    color:black !important;
+.list-sections li > a {
+    color: black !important;
 }
 
 /*.navbar-toggler {*/
@@ -188,7 +295,7 @@ body {
 
 .infoblock-card .card-footer ul li a {
     font-style: italic;
-    color: #2366a5;
+    color: #000000;
     font-size: 18px;
 }
 
@@ -200,7 +307,7 @@ body {
     content: "—";
     position: relative;
     left: -5px;
-    color: #2366a5;
+    color: #000000;
 }
 
 .base-exams-table thead tr td {
@@ -217,18 +324,19 @@ body {
 }
 
 .bac-mag .nav-link {
-    color: rgba(35, 102, 165, 0.7) !important;
+    color: rgba(0, 0, 0, 0.7) !important;
 }
 
 /*.bac-mag .nav-link:hover {*/
 /*    color: #2366a5 !important;*/
 /*}*/
-.nav-pills{
-    font-size:24px;
-    color:black;
+.nav-pills {
+    font-size: 24px;
+    color: black;
     background-color: white;
 
 }
+
 .form-row button {
     background-color: rgba(35, 102, 165, 0.7);
     color: white;
@@ -483,6 +591,7 @@ marquee {
 
 .border-priem {
     border: 1px solid black !important;
+    font-size: 24px;
 }
 
 .swith-priem {
@@ -595,8 +704,9 @@ marquee {
     background-color: black;
     color: white;
 }
+
 .table-scores td, .table-scores th {
-    border: 1px solid black !important;
+    border: 1px solid black;
 }
 
 .dropdown-item:focus, .dropdown-item:hover, .dropdown-item:active {
@@ -605,6 +715,7 @@ marquee {
     background-color: transparent !important;
     outline: none !important;
 }
+
 .table-scores th {
     color: black;
 }
@@ -630,7 +741,7 @@ marquee {
 /*    background-color: #2689cd;*/
 /*}*/
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1000px) {
 
     nav.navbar {
         padding-left: 0;
@@ -641,11 +752,12 @@ marquee {
         max-width: 100vw !important;
     }
 
-    .mrsu-logo-blue, .mrsu-eye-blue {
+    .mrsu-logo-blue, .mrsu-eye-blue, .mrsu-eye-black {
         display: none;
     }
 
-    .navbar-nav .nav-item .dropdown-menu  {
+
+    .navbar-nav .nav-item .dropdown-menu {
         width: 100% !important;
         border: none !important;
         text-align: center;
@@ -658,6 +770,7 @@ marquee {
     .foreign-link {
         color: white;
     }
+
     .hamburger {
         padding: 0 !important;
         height: 24px !important;
@@ -720,6 +833,7 @@ marquee {
     .foreign-link {
         color: white;
     }
+
     .hamburger {
         padding: 0 !important;
         height: 24px !important;
@@ -775,13 +889,13 @@ marquee {
     }
 }
 
-@media screen and (max-width: 990px){
+@media screen and (max-width: 990px) {
     .header {
         background-color: #2366a5;
     }
 }
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 375px) {
     .carousel-item {
         height: 200px !important;
     }
@@ -791,7 +905,7 @@ marquee {
     }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 320px) {
     .carousel-item {
         height: 150px !important;
     }
