--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -749,6 +749,28 @@ marquee {
 /*    background-color: #2689cd;*/
 /*}*/
 
+/*ovz*/
+@media screen and (min-width: 1300px) {
+
+    .ovz-form{
+        margin-bottom: 35px;
+    }
+    .ovz-row {
+        display:block;
+    }
+    .ovz-row > .bootstrap-select{
+        display:block;
+        max-width: 100%;
+        padding-left: 15px;
+    }
+    .ovz-row > .bootstrap-select  ul{
+        font-size: 18px;
+    }
+    .filter-option-inner-inner{
+        font-size: 18px;
+    }
+}
+
 @media screen and (max-width: 1000px) {
 
     nav.navbar {
@@ -802,6 +824,7 @@ marquee {
     .cont-w-100 {
         max-width: 100vw !important;
     }
+
 }
 
 @media screen and (max-width: 1000px) {
