--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -7,7 +7,6 @@ body {
 }
 
 
-
 #square {
     position: fixed;
     bottom: 20px;
@@ -52,9 +51,11 @@ body {
 .main-nav {
     background-color: #2366a5 !important;
 }
-.faculty-head{
-    color:#2366a5;
+
+.faculty-head {
+    color: #2366a5;
 }
+
 .main-nav button span {
     color: white;
 }
@@ -92,7 +93,6 @@ body {
 }
 
 
-
 .mrsu-card > ul > li {
     margin-bottom: 5px;
 }
@@ -125,7 +125,6 @@ body {
 }
 
 
-
 .infoblock-card .card-body img {
     height: auto;
 }
@@ -136,12 +135,13 @@ body {
     background-color: #2366a5;
 }
 
-.bold-border-imp{
-    border-bottom:2px solid #2366a5 !important;
+.bold-border-imp {
+    border-bottom: 2px solid #2366a5 !important;
 }
-.bold-border-right-imp{
-    border-bottom:2px solid #2366a5 !important;
-    border-right:2px solid #2366a5 !important;
+
+.bold-border-right-imp {
+    border-bottom: 2px solid #2366a5 !important;
+    border-right: 2px solid #2366a5 !important;
 }
 
 
@@ -187,9 +187,11 @@ body {
 .bac-mag .nav-link {
     color: rgba(35, 102, 165, 0.7) !important;
 }
+
 .bac-mag .nav-link:hover {
     color: #2366a5 !important;
 }
+
 /*.bac-mag .nav-link:hover {*/
 /*    color: #2366a5 !important;*/
 /*}*/
@@ -233,6 +235,7 @@ body {
     width: inherit;
     min-height: inherit;
 }
+
 .examInfo-bottom {
     width: 100%;
     padding: 16px;
@@ -558,8 +561,9 @@ marquee {
     background-color: #1b4b72;
     color: white;
 }
+
 .table-scores td, .table-scores th {
-    border: 1px solid #2366a5 ;
+    border: 1px solid #2366a5;
 }
 
 .dropdown-item:focus, .dropdown-item:hover, .dropdown-item:active {
@@ -600,6 +604,7 @@ marquee {
     body {
         font-size: 22px;
     }
+
     a {
         color: black;
         text-decoration: none;
@@ -609,24 +614,34 @@ marquee {
         font-weight: bold;
         color: black;
     }
+
     .mrsu-bg {
         background-color: #000000;
     }
+
     .mrsu-bg-button {
         background-color: #ffffff;
         border: 1px solid #000000;
         font-size: 20px;
     }
+
     .mrsu-bg-button-ovz {
         background-color: #ffffff;
         border: 1px solid #000000;
         font-size: 20px;
     }
 
-    .mrsu-bg-button:hover {
-        background-color: #ffffff;
-        color: black;
+    .mrsu-bg-button-ovz:hover {
+        background-color: #a5a5a5 !important;
+        color: black !important;
         border: 1px solid #000000;
+    }
+
+    .mrsu-bg-button:hover {
+        background-color: #a5a5a5!important;
+        color: black !important;
+        border: 1px solid #000000;
+        font-weight: bold;
     }
 
     .fa-search {
@@ -641,6 +656,7 @@ marquee {
         /*font-size:20px;*/
         font-weight: bold;
     }
+
     .ovz-form input {
         font-size: 20px;
         border: 2px solid black;
@@ -665,50 +681,59 @@ marquee {
     .h1-mrsu {
         font-weight: bold;
     }
-    h4{
+
+    h4 {
         font-weight: bold;
     }
-    .ovz-text{
-        font-size:22px;
+
+    .ovz-text {
+        font-size: 22px;
     }
+
     .check-subjects input {
         width: 26px;
         height: 26px;
     }
+
     .check-faculties input {
         width: 26px;
         height: 26px;
     }
-    .bold-border-imp{
-        border-bottom:2px solid black !important;
+
+    .bold-border-imp {
+        border-bottom: 2px solid black !important;
     }
-    .bold-border-right-imp{
-        border-bottom:2px solid black !important;
-        border-right:2px solid black !important;
+
+    .bold-border-right-imp {
+        border-bottom: 2px solid black !important;
+        border-right: 2px solid black !important;
     }
 
     .table-ovz-select, .table-ovz-select thead {
         border: 2px solid black;
     }
+
     .table-ovz-select thead {
         background-color: #ffffff !important;
     }
 
-    .table-ovz-select tbody,.table-ovz-select tr, .table-ovz-select td, .table-ovz-select th {
-        border: 1px solid black ;
-    }
-    .table-ovz-select thead th{
+    .table-ovz-select tbody, .table-ovz-select tr, .table-ovz-select td, .table-ovz-select th {
         border: 1px solid black;
     }
-    .faculty-head{
-        color:black;
+
+    .table-ovz-select thead th {
+        border: 1px solid black;
     }
 
+    .faculty-head {
+        color: black;
+    }
 
 
     .table-ovz {
         border: 2px solid black;
     }
+
     .table-ovz thead {
         background-color: #ffffff !important;
     }
@@ -716,9 +741,11 @@ marquee {
     .table-ovz thead, .table-ovz tbody, .table-ovz tr, .table-ovz td, .table-ovz th {
         border: 1px solid black !important;
     }
+
     .mrsu-logo-img {
         width: 0;
     }
+
     .mrsu-logo-img-ovz {
         width: 800px;
     }
@@ -738,6 +765,7 @@ marquee {
         border-right: 1px solid black;
         border-left: 1px solid black;
     }
+
     .navbar .dropdown-menu {
         z-index: 100;
         background-color: #ffffff !important;
@@ -747,13 +775,16 @@ marquee {
         border-radius: 0 !important;
         border: 1px solid black;
     }
+
     .mrsu-card {
         background-color: #ffffff;
         border: 1px solid #000000;
     }
+
     .navbar {
         border: 1px solid black;
     }
+
     #ovz_version {
         display: none !important;
     }
@@ -765,18 +796,22 @@ marquee {
         font-size: 20px;
         border: 1px solid black;
     }
+
     .infoblock-card a:hover {
         border: 2px solid black;
     }
+
     h5 {
         font-size: 24px;
     }
+
     .list-sections li {
         padding: 5px 10px;
         background-color: #ffffff;
         border: 1px solid #000000;
 
     }
+
     .list-sections li > a {
         color: black !important;
     }
@@ -786,18 +821,21 @@ marquee {
         color: #000000;
         font-size: 18px;
     }
+
     .infoblock-card .card-footer ul li:before {
         content: "—";
         position: relative;
         left: -5px;
         color: #000000;
     }
+
     .nav-pills {
         font-size: 24px;
         color: black;
         background-color: white;
 
     }
+
     .bac-mag .nav-link {
         color: rgba(0, 0, 0, 0.7) !important;
     }
@@ -812,6 +850,7 @@ marquee {
         min-height: inherit;
         border: 2px solid black;
     }
+
     .examInfo-bottom {
         width: 100%;
         padding: 18px;
@@ -826,6 +865,7 @@ marquee {
     .examInfo-bottom .spec {
         border-bottom: 1px solid black;
     }
+
     .examInfo tbody tr {
         border-bottom: 1px solid black;
     }
@@ -833,14 +873,15 @@ marquee {
     #exampleModalScrollable .modal-body {
         background-color: #474747;
         color: white;
-        border:2px solid black;
+        border: 2px solid black;
     }
 
-    .modal-content{
-        border:4px solid #ffffff;
+    .modal-content {
+        border: 4px solid #ffffff;
     }
-    .modal-header-ovz{
-        border:2px solid black;
+
+    .modal-header-ovz {
+        border: 2px solid black;
     }
 
     .topline {
@@ -848,8 +889,8 @@ marquee {
         /*border-top: 50px solid #007ed0;*/
         height: 75px;
         background-color: #474747;
-        color:black;
-        border:2px solid black;
+        color: black;
+        border: 2px solid black;
     }
 
     .foreign-link {
@@ -878,6 +919,7 @@ marquee {
     .swith-priem a.active {
         background-color: black !important;
     }
+
     .file-link-div a {
         color: #000000;
     }
@@ -891,6 +933,7 @@ marquee {
         font-size: 18px;
         box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
     }
+
     .contact-us button {
         box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
         margin: 10px;
@@ -913,6 +956,7 @@ marquee {
     .table-scores th {
         color: black;
     }
+
     .table-scores thead tr th {
         background-color: white !important;
         text-transform: uppercase;
@@ -930,21 +974,25 @@ marquee {
         color: black !important
     }
 
-    .ovz-form{
+    .ovz-form {
         margin-bottom: 35px;
     }
+
     .ovz-row {
-        display:block;
+        display: block;
     }
-    .ovz-row > .bootstrap-select{
-        display:block;
+
+    .ovz-row > .bootstrap-select {
+        display: block;
         max-width: 100%;
         padding-left: 15px;
     }
-    .ovz-row > .bootstrap-select  ul{
+
+    .ovz-row > .bootstrap-select ul {
         font-size: 18px;
     }
-    .filter-option-inner-inner{
+
+    .filter-option-inner-inner {
         font-size: 18px;
     }
 }
