--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -643,6 +643,11 @@ marquee {
         border: 1px solid #000000;
         font-weight: bold;
     }
+    marquee {
+        border-bottom: 1px solid #000000;
+        border-top: 1px solid #000000;
+        color: #000000;
+    }
 
     .fa-search {
         color: black !important;
