--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -513,7 +513,18 @@ marquee {
     padding: 50px 20px;
     width: fit-content;
 }
+.contact-main-tel{
+    font-weight: 900;
+    font-size: 2.5em;
+    text-decoration: underline;
+}
+.contact-div{
+    /*font-size: 1.2em;*/
+}
 
+.spec-ovz-link{
+    text-decoration: underline;
+}
 .input-mistake {
     background-color: rgba(255, 0, 0, 0.05);
 }
