--- a/public/css/style.css
+++ b/public/css/style.css
@@ -510,6 +510,14 @@ marquee {
     padding: 50px 20px;
     width: fit-content;
 }
+.contact-main-tel{
+    font-weight: 900;
+    font-size: 2.5em;
+    text-decoration: underline;
+}
+.contact-div{
+    /*font-size: 1.2em;*/
+}
 
 .input-mistake {
     background-color: rgba(255, 0, 0, 0.05);
