--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .mrsu-logo-img {
-    width: 342px;
+    /*width: 342px;*/
     height: 54px;
 }
 
@@ -337,7 +337,15 @@ marquee {
     height: 75px;
     background-color: #007ed0;
 }
-
+.topline-stat {
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.32);
+    /*border-top: 50px solid #007ed0;*/
+    height: 75px;
+    background-color: #2366a5;
+}
+.files-stat{
+    color:#2366a5;
+}
 .inputGroup {
     background-color: rgba(85, 98, 235, 0.51);
     display: block;
