--- a/public/css/style.css
+++ b/public/css/style.css
@@ -740,7 +740,8 @@ marquee {
     }
 
     .container-fluid {
-        /*padding: 1.5rem !important;*/
+        padding-left: 1.5rem !important;
+        padding-right: 1.5rem !important;
     }
 
     .course-name {
