--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -524,7 +524,34 @@ marquee {
 
 .spec-ovz-link{
     text-decoration: underline;
+    color: #000000 !important;
 }
+
+.spec-ovz-link a{
+    color: #000000 !important;
+}
+
+.legend{
+    color: #000000;
+    font-size: 1.5em;
+    text-decoration: underline
+}
+.legend:hover {
+    color: #000000;
+    font-size: 1.5em;
+    text-decoration: underline
+}
+.topline-stat{
+    color: #000000;
+    height: 75px;
+}
+.modal-stat h5{
+    font-weight: bold;
+}
+.modal-stat{
+    border: 4px #000000 solid !important;
+}
+
 .input-mistake {
     background-color: rgba(255, 0, 0, 0.05);
 }
@@ -923,6 +950,7 @@ marquee {
         background-color: #474747;
         color: black;
         border: 2px solid black;
+
     }
 
     .foreign-link {
