--- a/public/css/vue2editor.css
+++ b/public/css/vue2editor.css
@@ -37,7 +37,7 @@
 .ql-editor {
     box-sizing: border-box;
     line-height: 1.42;
-    height: 100%;
+    height: fit-content;
     outline: none;
     overflow-y: auto;
     padding: 12px 15px;
