--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,6 +115,11 @@ body {
     border-radius: 0 !important;
 }
 
+.main-color > .main-color-dropdown {
+    background-color: #155289 !important;
+    top: 255px !important;
+}
+
 .mrsu-card > ul > li {
     margin-bottom: 5px;
 }
@@ -817,6 +822,10 @@ marquee {
 
     .navbar-nav .nav-item .dropdown-menu {
         background-color: #184d80 !important;
+    }
+
+    .navbar-nav .nav-item .dropdown-menu .dropdown-menu {
+        background-color: #0d345b !important;
     }
 }
 
