--- a/public/css/ovz.css
+++ b/public/css/ovz.css
@@ -820,8 +820,13 @@ marquee {
 
     .main-nav ul li a {
         color: #000000 !important;
-        font-size: 20px;
+        font-size: 18px;
         padding: 15px 0;
+    }
+
+    .main-color > .main-color-dropdown {
+        border: black 2px solid;
+        top: 255px !important;
     }
 
     .main-nav ul li:hover {
@@ -837,7 +842,8 @@ marquee {
         width: 300px !important;
         top: 46px !important;
         border-radius: 0 !important;
-        border: 1px solid black;
+        border: 1px solid black !important;
+
     }
 
     .mrsu-card {
